# dascore

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  agents.md  asv.conf.json  azure-pipelines.yml  conftest.py  d  dasdasdasd  environment.yml  mytask_waterfall.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py
.agents/: agents.md  guidelines.md
.github/: ISSUE_TEMPLATE.md  README.md  doc_environment.yml  labeler.yml  labeler.yml   min_deps_environment.yml  pull_reqest_template.md  pull_request_template.md  shared-vars.yml  test_code.sh  test_condarc.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  development-discussion-.md  question.md
.github/scripts/: cache_test_data.py  export_test_data_cache_env.py
.github/workflows/: build_deploy_docs.yaml  build_deploy_master_docs.yaml  build_deploy_stable_docs.yaml  codspeed.yml  deploy_docs2.yaml  get_coverage.yml  labeler.yml  lint.yml  on_master_commits.yml  prime_test_data_cache.yml  profile.yml  run_min_dep_tests.yml  runtests.yml  test_doc_build.yml  upload_pypi.yml
benchmarks/: __init__.py  generic_io_benchmarks.py  memory_spool_benchmarks.py  patch_benchmarks.py  readme.md  test_align_benchmarks.py  test_io_benchmarks.py  test_patch_benchmarks.py  test_spool_benchmarks.py
benchmarks/notebooks/: patch_v_xarray.ipynb  readme.md  rolling.ipynb  rolling_real_time.ipynb
dascore/: __init__.py  compat.py  config.py  constants.py  data_registry.txt  examples.py  exceptions.py  units.py  version.py
dascore/clients/: __init__.py  dirspool.py  filespool.py
dascore/core/: __init__.py  accessor.py  annotations.py  attrs.py  basedatasource.py  conversions.py  coordmanager.py  coords.py  inventory.py  patch.py  schema.py  spool.py  stream.py  summary.py
dascore/io/: __init__.py  base.py  core.py  indexer.py  plugin.py
dascore/plugin_registry/: patch.csv  spool.csv
dascore/proc/: __init__.py  _adaptive_spectral_filter_numba.py  adaptive_spectral_filter.py  aggregate.py  align.py  basic.py  coords.py  correlate.py  decimate.py  detrend.py  diff.py  differentiate.py  filter.py  finitediff.py  hampel.py  integrate.py  inventory.py  mute.py  resample.py  rolling.py  select.py  taper.py  units.py  whiten.py  whitening.py  wiener.py
dascore/transform/: __init__.py  differentiate.py  dispersion.py  fbe.py  fft.py  fourier.py  hilbert.py  integrate.py  kurtosis.py  mean_median_frequency.py  spectra.py  spectral_descriptors.py  spectro.py  stalta.py  strain.py  taup.py
dascore/utils/: __init__.py  array.py  attrs.py  chunk.py  coordmanager.py  coords.py  deprecate.py  display.py  docs.py  downloader.py  duck.py  fileindexer.py  fs.py  hdf5.py  inventory.py  io.py  jit.py  mapping.py  misc.py  models.py  moving.py  namespace.py  patch.py  paths.py  pd.py  plotting.py  plugin.py  plugins.py  progress.py  remote_io.py  saveload.py  signal.py  spool.py  time.py  transformatter.py  ufuncs.py  units.py  xml.py
dascore/viz/: __init__.py  core.py  map_fiber.py  plot_map.py  specplot.py  spectraplot.py  spectrogram.py  waterfall.py  wiggle.py
dfs/: __init__.py  constants.py  core.py  data_registry.txt  exceptions.py
dfs/bank/: __init__.py  base.py  fiberbank.py  utils.py
dfs/core/: __init__.py  constructor.py  filter.py  reshape.py  stream.py  trace.py  trim.py
dfs/io/: __init__.py  base.py  das.py  read.py  scan.py  terra15.py
dfs/signal/: __init__.py
dfs/spool/: __init__.py  fiberbank.py
dfs/utils/: __init__.py  accessor.py  downloader.py  misc.py  plugin.py  time.py
dfs/viz/: __init__.py  app.py  utils.py  workbench.py
dfs/workbench/: __init__.py  qcompat.py  utils.py  workbench.py
docs/: .gitignore  LICENSE  Makefile  _publish.yml  _quarto.yml  acknowledgements.md  acknowledgements.qmd  api.rst  changelog.md  changelog.qmd  conf.py  contributors.md  contributors.qmd  doc_requirements.txt  index.css  index.qmd  index.rst  installation.rst  intro.qmd  make.bat  quickstart.qmd  references.bib  styles.css  supported_formats.qmd  supported_plugins.qmd  test.md  usage.rst
docs/_site/: changelog.html  contributors.html  index.html  installation.html  robots.txt  search.json  sitemap.xml
docs/_templates/: class.qmd  function.qmd  method.qmd  module.qmd  signature.html
docs/api/: fios.constants.rst  fios.core.conversions.rst  fios.core.coords.rst  fios.core.filter.rst  fios.core.patch.rst  fios.core.rst  fios.core.stream.rst  fios.examples.rst  fios.exceptions.rst  fios.io.base.rst  fios.io.rst  fios.io.terra15.rst  fios.io.terra15.ver2.rst  fios.proc.decimate.rst  fios.proc.detrend.rst  fios.proc.filter.rst  fios.proc.finitediff.rst  fios.proc.resample.rst  fios.proc.rst  fios.rst  fios.transform.rst  fios.transform.strain.rst  fios.utils.docs.rst  fios.utils.downloader.rst  fios.utils.mapping.rst  fios.utils.misc.rst  fios.utils.patch.rst  fios.utils.plugin.rst  fios.utils.rst  fios.utils.time.rst  fios.version.rst  fios.viz.core.rst  fios.viz.rst  fios.viz.waterfall.rst  modules.rst
docs/contributing/: adding_test_data.qmd  code_of_conduct.qmd  contributing.qmd  dev_install.md  dev_install.qmd  documentation.qmd  extending_dascore.qmd  general_guidelines.qmd  new_format.qmd  profiling_benchmarks.qmd  publish_a_new_release.qmd  style_and_linting.qmd  (+1 more)
fios/: __init__.py  constants.py  core.py  data_registry.txt  examples.py  exceptions.py  version.py
old/: deploy_docs.yml
plans/: array_api.md
scripts/: _benchmark_uilts.py  _index_api.py  _qmd_builder.py  _render_api.py  _validate_links.py  build_api_docs.py  clean_docs.py  find_futures.py  generate_autogenerated_doccode_tests.py  generate_doc_code_tests.py  graph_example.py  make_docs.py  make_unfinished_terra15_file.py  modify_h5_file.py  render.py  render_api_docs.py  run_benchmarks.py  test_dataset.py  test_generate_autogenerated_doccode_tests.py  test_generate_doc_code_tests.py  test_qmd_builder.py  test_render_api.py  trim_terra15.py  visualize_benchmarks.py
tests/: conftest.py  test_array_api.py  test_compat.py  test_dfs.py  test_examples.py  test_units.py
(+414 files in other folders)
