
# --- Build system configuration

[build-system]
requires = [ "setuptools>=41", "setuptools-scm", "scikit-build"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools]
include-package-data = true
packages = ["dascore"]

[tool.setuptools_scm]  # this empty section enables the tool

# --- Project Metadata

[project]
name = "dascore"
dynamic = ["version"]  # version is fetched by setuptools-git-versioning

authors = [
  { name="Derrick Chambers", email="chambers.ja.derrick@gmail.com" },
]

description = "A python library for distributed fiber optic sensing"
readme = "readme.md"
license = { file="docs/LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

keywords = ["geophysics", "distributed-acoustic-sensing"]

# --- Dependencies

dependencies = [
     "h5py",
     "matplotlib>=3.5",
     "numpy>=1.24",
     "packaging",
     "pandas>=2.0",
     "pooch>=1.2",
     "pydantic>2.1",
     "rich",
     "tables>=3.7",
     "typing_extensions>=4.12",
     "pint",
     "scipy>=1.15",
]

[project.optional-dependencies]

extras = [
    "xarray",
    "findiff",
    "obspy",
    "numba",
    "segyio",
    "bottleneck",
]

docs = [
    "jinja2",
    "ipywidgets",
    "tabulate",
]

test = [
    "coverage>=7.4,<8",
    "pytest-cov>=4",
    "pre-commit",
    "pytest",
    "pytest-codeblocks",
    "pytest-cov",
    "twine",
]

profile_base = [
    "pytest-codspeed",
    "pytest-profiling",
]

all = ["dascore[extras]"]

profile = ["dascore[test]", "dascore[profile_base]"]

dev = ["dascore[test]", "dascore[docs]", "dascore[profile_base]", "dascore[extras]"]




# --- URLs for project

[project.urls]
"Bug Tracker" = "https://github.com/DASDAE/dascore/issues"
"Documentation" = "https://dascore.org"
"Homepage" = "https://dascore.org"

# --- Entry Points

[project.entry-points."dascore.fiber_io"]
APSENSING__V10 = "dascore.io.ap_sensing.core:APSensingV10"
DASDAE__V1 = "dascore.io.dasdae.core:DASDAEV1"
DASHDF5__V1 = "dascore.io.dashdf5.core:DASHDF5"
H5SIMPLE__V1_0 = "dascore.io.h5simple.core:H5Simple"
FEBUS__V1 = "dascore.io.febus.core:Febus1"
FEBUS__V2 = "dascore.io.febus.core:Febus2"
NEUBREXRFS__V1 = "dascore.io.neubrex:NeubrexRFSV1"
NEUBREXDAS__V1 = "dascore.io.neubrex:NeubrexDASV1"
OPTODAS__V8 = "dascore.io.optodas.core:OptoDASV8"
OPTODAS__V9 = "dascore.io.optodas.core:OptoDASV9"
OPTODAS__V10 = "dascore.io.optodas.core:OptoDASV10"
PICKLE = "dascore.io.pickle.core:PickleIO"
PRODML__V2_0 = "dascore.io.prodml.core:ProdMLV2_0"
PRODML__V2_1 = "dascore.io.prodml.core:ProdMLV2_1"
SENTEK__V5 = "dascore.io.sentek.core:SentekV5"
TDMS__V4713 = "dascore.io.tdms.core:TDMSFormatterV4713"
TERRA15__V4 = "dascore.io.terra15.core:Terra15FormatterV4"
TERRA15__V5 = "dascore.io.terra15.core:Terra15FormatterV5"
TERRA15__V6 = "dascore.io.terra15.core:Terra15FormatterV6"
SEGY__V0_0 = "dascore.io.segy.core:SegyV0_0"
SEGY__V0_100 = "dascore.io.segy.core:SegyV0_100"
SEGY__V1_0 = "dascore.io.segy.core:SegyV1_0"
SEGY__V2_0 = "dascore.io.segy.core:SegyV2_0"
SEGY__V2_1 = "dascore.io.segy.core:SegyV2_1"
SILIXA_H5__V1 = "dascore.io.silixah5:SilixaH5V1"
SINTELA_BINARY__V3 = "dascore.io.sintela_binary.core:SintelaBinaryV3"
RSF__V1 = "dascore.io.rsf.core:RSFV1"
WAV = "dascore.io.wav.core:WavIO"
XMLBINARY__V1 = "dascore.io.xml_binary.core:XMLBinaryV1"
GDR_DAS__V1 = "dascore.io.gdr.core:GDR_V1"


# --- External tool configuration

[tool.ruff]

line-length = 88

# enable certain types of linting
lint.select = [
    "E",
    "F",
    "UP",
    "RUF",
    "I001",
    "D",
    "FA",
    "T",
    "N",
    "NPY",
    "NPY201",
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "__init__.py"
]

# lowest python version supported
target-version = "py310"

lint.fixable = ["ALL"]

# List of codes to ignore
lint.ignore = ["D105", "D107", "D401", "D205", "D200", "D400"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# config for docstring parsing
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore hdf5 warnings from pytables, See pytables #1035
    'ignore::Warning:tables:'
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
