[metadata]
name = dascore
version = 0.1.0
description =
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = geophysics, fiber-sensing, python, seismology
license = GNU Lesser General Public License v3.0 or later (LGPLv3.0+)
classifiers =
    "Development Status :: 4 - Beta",
    "Intended Audience :: Scientists/Engineers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",

python_requires = >= 3.8


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    findiff
    matplotlib
    pandas
    pooch>=1.2
    setuptools
    scipy
    tables
    xarray

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
dascore.plugin.fiber_io =
    TERRA15 = dascore.io.terra15.core:Terra15Formatter
    PICKLE = dascore.io.pickle.core:PickleIO
    WAV = dascore.io.wav.core:WavIO

[options.extras_require]
docs =
    sphinx>=1.5.1
;    ipykernel
    numpydoc
    sphinx_autodoc_typehints
    typer
;    jupyter
    pandoc
    myst-parser
    myst-nb
;    recommonmark
;    jupytext
;    nbsphinx
test =
    pytest
    coverage
    pytest-cov
    coveralls
    twine
    pre-commit
    pytest-codeblocks

[build-system]
requires =
    "setuptools >= 40.9.0",
    "wheel",

build-backend = "setuptools.build_meta"


[flake8]
;verbose = true
max-complexity = 18
; match black line-length
max-line-length = 88
extend_ignore =
    E203  # see flake8-black for details
;     ignore a bunch of docstring codes
    D105
    D200
    D202
    D204
    D205
    D210
    D400
    D401
    D403
    D404
    D412
    D414
    W605
; exclude certain files
exclude =
    .git
    __pycache__
    docs
    old/*
    build
    dist
    wip
    __init__.py
    .eggs
    .tox
    wip/*
    docs/*
    versioneer.py

docstring-convention = numpy


[isort]
profile = black
multi_line_output = 3
; skip init because they can be sensitive to circular imports
skip =
    __init__.py
    old
